--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>JusKidin</title>
+	</head>
+
 <p>Hello World!</p>
