--- a/public/resources.html
+++ b/public/resources.html
@@ -5,5 +5,6 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>JusKidin Resources</title>
 	</head>
-
-<p>Hello World!</p>
+<body>
+    <p>Hello World!</p>
+</body>
