--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,6 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>JusKidin</title>
 	</head>
-
-<p>Hello World!</p>
+<body>
+	<p>Hello World!</p>
+</body>
