--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,7 @@
 	</head>
 <body>
 	<p>Hello World!</p>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
