--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta charset="UTF-8">
 		<title>JusKidin</title>
 	</head>
 <body>
+	<h1>JusKidin</h1>
 	<p>Hello World!</p>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
+</html>
