updated html and css to include

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,10 @@
 		</main>
 	</div>
 	<div id="navigation">
-		<nav role="main">
-			<ul>
-				<li>Account</li>
-				<li>Child/ren</li>
-				<li>New Drawer</li>
-			</ul>
+		<nav role="main" class="mainnav">
+			<a href="#account">Account</a>
+			<a href="#child/ren">Child/ren</a>
+			<a href="#newdrawer">New Drawer</a>
 		</nav>
 	</div>
 </body>
