updated files to effectively connect with the database

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		<header role="banner">
 			<h1>JusKidin</h1>
 			<h2>Support your children.  Keep all the memories.</h2>
-			<p>Create profiles for each of your children. Connect to relevant web resources based on your child's age. Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
+			<p>Create profiles for each of your children. Connect to relevant web resources based on your child's age. </br> Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
 		</header>
 	</div>
 	<div id="body">
@@ -33,6 +33,15 @@
 			</div>
 			</section>
 		</main>
+	</div>
+	<div id="searchAssets">
+		<section role="region">
+			<form class"search">
+				<legend>Search</legend>
+				<label for="search-drawers">Search Drawers</label>
+				<input id="search-drawers" placeholder="Search Drawers" name="search-drawers" type="text">
+			</form>
+		</section>
 	</div>
 	<div id="navigation">
 		<nav role="main" class="mainnav">
