--- a/public/assets.html
+++ b/public/assets.html
@@ -3,8 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>JusKidin  Assets</title>
+		<title>JusKidin GSearch</title>
+		<link rel="stylesheet" href="styles.css" />
+		<link href="https://fonts.googleapis.com/css?family=Overlock|Open+Sans:400,600" rel="stylesheet">
+		<link rel="stylesheet" href="float-grid.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script type="text/javascript" src="app.js"></script>
 	</head>
 <body>
-	<p>Hello World!</p>
+	<h1>Digital Drawers</h1>
+	
 </body>
