worked on navigation and updating tests

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,29 @@
 		
 	</head>
 <body>
+	<div id="navigation">
+		<nav aria-label="JusKidin Menu Options" class="maintopnav" role="navigation">
+			<div class="dropdown">
+				<button class="dropbtn">Child/ren  <i class="fas fa-arrow-down"></i></a>
+				</button>
+					<div class="dropdown-content">
+						<a href="#">Child 1</a>
+						<a href="#">Child 2</a>
+						<a href="#">New Child</a>
+					</div>
+			</div>
+			<div class="dropdown">
+				<button class="dropbtn">Drawers  <i class="fas fa-arrow-down"></i></a>
+				</button>
+					<div class="dropdown-content">
+						<a href="#">Drawer 1</a>
+						<a href="#">Drawer 2</a>
+						<a href="#">Upload to Drawer</a>
+						<a href="#">Create New Drawer</a>
+					</div>
+			</div>
+		</nav>
+	</div>
 	<div id="header">
 		<header role="banner">
 			<h1>JusKidin</h1>
@@ -44,72 +67,5 @@
 			</form>
 		</section>
 	</div>
-	<div id="navigation">
-		<nav aria-label="JusKidin Menu Options" class="mainnav">
-			<ul id="homenav" role="menubar" aria-label="JusKidin Menu Options">
-				<li class="has-submenu">
-					<a role="menuitem"
-					href="#" aria-haspopup="true" aria-expanded="false"
-					tabindex="0">
-					 Child/ren
-				   </a><i class="fas fa-arrow-down"></i>
-				</li>
-				<ul role="menu" aria-label="Child/ren" class="submenu">
-					<li role="none">
-						<a role="menuitem"
-						href="#"
-						tabindex="-1">
-						Child 1
-						</a>
-					</li>
-					<li role="none">
-						<a role="menuitem"
-						href="#"
-						tabindex="-2">
-						Child 2
-						</a>
-					</li>
-					<li role="none">
-						<a role="menuitem"
-						href="#"
-						tabindex="-3">
-						Add New Child
-						</a>
-					</li>
-				</ul>
-				<li class="has-submenu">
-					<a role="menuitem"
-					href="#" aria-haspopup="true" aria-expanded="false"
-					tabindex="0">
-					 Drawers 
-					</a><i class="fas fa-arrow-down"></i>
-				</li>
-					<ul role="menu" aria-label="Drawers" class="submenu">
-						<li role="none">
-							<a role="menuitem"
-							href="#"
-							tabindex="-1">
-							Drawer 1
-							</a>
-						</li>
-						<li role="none">
-							<a role="menuitem"
-							href="#"
-							tabindex="-2">
-							Drawer 2
-							</a>
-						</li>
-						<li role="none">
-							<a role="menuitem"
-							href="#"
-							tabindex="-3">
-							Create New Drawer
-							</a>
-						</li>
-					</ul>	
-			</ul>
-		</nav>
-	</div>
-	
 </body>
 </html>
