--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	</head>
 <body>
 	<ul class="topnav" role="navigation" id="responsivetopnav">
-		<li class="icon"><a href="javascript:void(0);" onclick="showNavigationItems()"><i class="fa fa-bars"></i>
+		<li class="icon"><a href="#" onclick="showNavigationItems()"><i class="fa fa-bars"></i>
 		</a></li>
 		<li class="maintopnav"><button class="dropbtn">Home  <i class="fas fa-home"></i></button></li>
 		<li class="maintopnav"><button class="dropbtn">Account  <i class="fas fa-user"></i></button></li>
@@ -22,7 +22,7 @@
 					<div class="dropdown-content">
 						<a href="#">Child 1</a>
 						<a href="#">Child 2</a>
-						<a onclick="childOn()" href="#"><i class="fas fa-plus"></i> New Child</a>
+						<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
 					</div>
 			</div>
 			<div class="dropdown">
@@ -51,7 +51,7 @@
 			<p>Create profiles for each of your children. Connect to relevant web resources based on your child's age. </br> Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
 		</header>
 	</div>
-	<div id="addChildForm">
+	<div id="addChildForm" class="overlay">
 		<div class="addChild" id="childoverlay" onclick="childOff()">
 			<form>
 				<ul class="flex-outer">
