--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,11 @@
 			<p>Create profiles for each of your children. Connect to relevant web resources based on your child's age. </br> Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
 		</header>
 	</div>
-	<div id="addChildForm" class="overlay">
-		<div class="addChild" id="childoverlay" onclick="childOff()">
+	<div id="childoverlay" class="overlay">
+		<div class="addChild" id="addChildForm">
 			<form>
 				<ul class="flex-outer">
+					<p class="form-title">Add New Child</p>
 					<li>
 					<label for="first-name">First Name</label>
 					<input type="text" id="first-name" placeholder="Enter child's first name here">
@@ -60,16 +61,17 @@
 					<input type="text" id="birth-date" placeholder="Enter child's birth date here">
 					</li>
 					<li>
-					<button type="submit">Create</button>
+					<button id="childoverlaybutton" type="submit" onclick="childOff()">Create</button>
 					</li>
 				</ul>
 			</form>
 		</div>
 	</div>
-	<div id="uploadAssetForm">
-		<div class="uploadAsset" id="assetoverlay" onclick="assetOff()">
+	<div id="assetoverlay">
+		<div class="uploadAsset" id="uploadAssetForm">
 			<form>
 				<ul class="flex-outer">
+					<p class="form-title">Upload File</p>
 					<li>
 					<label for="title">Title</label>
 					<input type="text" id="first-name" placeholder="Title">
@@ -83,22 +85,23 @@
 						<input type="image" id="image" width="300" height="250" placeholder="Upload Your Image Here">
 					</li>
 					<li>
-					<button type="submit">Upload</button>
+					<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
 					</li>
 				</ul>
 			</form>
 		</div>
 	</div>
-	<div id="addDrawerForm">
-		<div class="addDrawer" id="draweroverlay" onclick="drawerOff()">
+	<div id="draweroverlay">
+		<div class="addDrawer" id="addDrawerForm">
 			<form>
 				<ul class="flex-outer">
+					<p class="form-title">Create Drawer</p>
 					<li>
 					<label for="drawer-name">Drawer Name</label>
 					<input type="text" id="first-name" placeholder="Drawer Name">
 					</li>
 					<li>
-					<button type="submit">Create</button>
+					<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
 					</li>
 				</ul>
 			</form>
