minor update to navigation

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	</head>
 <body>
 	<div class="topnav" role="navigation" id="responsivetopnav">
-		<a class="active" href="#home">Home  <i class="fas fa-home"></i></a>
+		<a href="#home">Home  <i class="fas fa-home"></i></a>
 		<a href="#account">Account <i class="fas fa-user"></i></a>
 			<div class="dropdown">
 				<a href="#children">Child(ren)  <i class="fas fa-arrow-down"></i></a>
