updated html structure to be more semantic, started work on the google search function including builiding out the find child age function

--- a/public/assets.html
+++ b/public/assets.html
@@ -45,41 +45,43 @@
 			<h2>Drawers</h2>
 		</header>
 	</div>
-	<div class="tab">
-			<button class="tablinks" onclick="openChild(event, 'Child1')" id="defaultOpen">Drawer 1</button>
-			<button class="tablinks" onclick="openChild(event, 'Child2')">Drawer 2</button>
-			<button class="tablinks" onclick="openChild(event, 'NewChild')">New Drawer</button>
-	</div>		  
-	<div id="Child1" class="tabcontent">
-		<section role="region">
-			<div class="container">
-				<div class="grid">
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+	<main role="main">
+		<div class="tab">
+				<button class="tablinks" onclick="openChild(event, 'Child1')" id="defaultOpen">Drawer 1</button>
+				<button class="tablinks" onclick="openChild(event, 'Child2')">Drawer 2</button>
+				<button class="tablinks" onclick="openChild(event, 'NewChild')">New Drawer</button>
+		</div>		  
+		<div id="Child1" class="tabcontent">
+			<section role="region">
+				<div class="container">
+					<div class="grid">
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+					</div>
 				</div>
-			</div>
-		</section>
-	</div>		  
-	<div id="Child2" class="tabcontent">
-		<section role="region">
-			<div class="container">
-				<div class="grid">
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+			</section>
+		</div>		  
+		<div id="Child2" class="tabcontent">
+			<section role="region">
+				<div class="container">
+					<div class="grid">
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+					</div>
 				</div>
-			</div>
-		</section> 
-	</div>		  
-	<div id="NewChild" class="tabcontent">
-		<h3>Create Drawer</h3>
-		<p>Use this form to create a new drawer.</p>
-	</div>
+			</section> 
+		</div>		  
+		<div id="NewChild" class="tabcontent">
+			<h3>Create Drawer</h3>
+			<p>Use this form to create a new drawer.</p>
+		</div>
+	</main>
 </body>
