--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -45,21 +45,23 @@
 			<h2>Web Resource Links</h2>
 		</header>
 	</div>
-	<div class="tab">
-			<button class="tablinks" onclick="openChild(event, 'Child1')" id="defaultOpen">Child 1</button>
-			<button class="tablinks" onclick="openChild(event, 'Child2')">Child 2</button>
-			<button class="tablinks" onclick="openChild(event, 'NewChild')">New Child</button>
-	</div>		  
-	<div id="Child1" class="tabcontent">
-		<h3>Child 1</h3>
-		<p>Child 1 is a so many years old child. Please find the web resources below helpful.</p>
-	</div>		  
-	<div id="Child2" class="tabcontent">
-		<h3>Child 2</h3>
-		<p>Child 2 is a so many years old child. Please find the web resources below helpful.</p> 
-	</div>		  
-	<div id="NewChild" class="tabcontent">
-		<h3>New Child</h3>
-		<p>Use this form to add a new child.</p>
-	</div>
+	<main role="main">
+		<div class="tab">
+				<button class="tablinks" onclick="openChild(event, 'Child1')" id="defaultOpen">Child 1</button>
+				<button class="tablinks" onclick="openChild(event, 'Child2')">Child 2</button>
+				<button class="tablinks" onclick="openChild(event, 'NewChild')">New Child</button>
+		</div>		  
+		<div id="Child1" class="tabcontent">
+			<h3>Child 1</h3>
+			<p>Child 1 is a so many years old child. Please find the web resources below helpful.</p>
+		</div>		  
+		<div id="Child2" class="tabcontent">
+			<h3>Child 2</h3>
+			<p>Child 2 is a so many years old child. Please find the web resources below helpful.</p> 
+		</div>		  
+		<div id="NewChild" class="tabcontent">
+			<h3>New Child</h3>
+			<p>Use this form to add a new child.</p>
+		</div>
+	</main>	
 </body>
