--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Overlock|Open+Sans:400,600" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="app.js"></script>
 		<script type="text/javascript" src="client.js"></script>
-		
 	</head>
 <body>
 	<div class="topnav" role="navigation" id="responsivetopnav">
@@ -47,79 +47,85 @@
 			<p>Create profiles for each of your children. Connect to relevant web resources based on your child's age. </br> Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
 		</header>
 	</div>
-	<div id="childoverlay" class="overlay">
-		<div class="addChild" id="addChildForm">
-			<form>
-				<ul class="flex-outer">
-					<p class="form-title">Add New Child</p>
-					<li>
-					<label for="first-name">First Name</label>
-					<input type="text" id="first-name" placeholder="Enter child's first name here">
-					</li>
-					<li>
-					<label for="birth-date">Birth Date</label>
-					<input type="text" id="birth-date" placeholder="Enter child's birth date here">
-					</li>
-					<li>
-					<button id="childoverlaybutton" type="submit" onclick="childOff()">Create</button>
-					</li>
-				</ul>
-			</form>
+	<section role="region">
+		<div id="childoverlay" class="overlay">
+			<div class="addChild" id="addChildForm">
+				<form class="child-age-form">
+					<ul class="flex-outer">
+						<p class="form-title">Add New Child</p>
+						<li>
+						<label for="first-name">First Name</label>
+						<input type="text" id="first-name" placeholder="Enter child's first name here">
+						</li>
+						<li>
+						<label for="birth-date">Birth Date</label>
+						<input type="text" class="child-birth-date" id="birth-date" placeholder="Enter child's birth date here">
+						</li>
+						<li>
+						<button id="childoverlaybutton" type="submit" onclick="childOff()">Create</button>
+						</li>
+					</ul>
+				</form>
+			</div>
 		</div>
-	</div>
-	<div id="assetoverlay">
-		<div class="uploadAsset" id="uploadAssetForm">
-			<form>
-				<ul class="flex-outer">
-					<p class="form-title">Upload File</p>
-					<li>
-					<label for="title">Title</label>
-					<input type="text" id="first-name" placeholder="Title">
-					</li>
-					<li>
-					<label for="date-uploaded">Today's Date</label>
-					<input type="text" id="date-uploaded" placeholder="Enter Today's Date">
-					</li>
-					<li>
-						<label for="image">Image</label>
-						<input type="image" id="image" width="300" height="250" placeholder="Upload Your Image Here">
-					</li>
-					<li>
-					<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
-					</li>
-				</ul>
-			</form>
+	</section>
+	<section role="region">
+		<div id="assetoverlay">
+			<div class="uploadAsset" id="uploadAssetForm">
+				<form>
+					<ul class="flex-outer">
+						<p class="form-title">Upload File</p>
+						<li>
+						<label for="title">Title</label>
+						<input type="text" id="first-name" placeholder="Title">
+						</li>
+						<li>
+						<label for="date-uploaded">Today's Date</label>
+						<input type="text" id="date-uploaded" placeholder="Enter Today's Date">
+						</li>
+						<li>
+							<label for="image">Image</label>
+							<input type="image" id="image" width="300" height="250" placeholder="Upload Your Image Here">
+						</li>
+						<li>
+						<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
+						</li>
+					</ul>
+				</form>
+			</div>
 		</div>
-	</div>
-	<div id="draweroverlay">
-		<div class="addDrawer" id="addDrawerForm">
-			<form>
-				<ul class="flex-outer">
-					<p class="form-title">Create Drawer</p>
-					<li>
-					<label for="drawer-name">Drawer Name</label>
-					<input type="text" id="first-name" placeholder="Drawer Name">
-					</li>
-					<li>
-					<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
-					</li>
-				</ul>
-			</form>
+	</section>
+	<section role="region">
+		<div id="draweroverlay">
+			<div class="addDrawer" id="addDrawerForm">
+				<form>
+					<ul class="flex-outer">
+						<p class="form-title">Create Drawer</p>
+						<li>
+						<label for="drawer-name">Drawer Name</label>
+						<input type="text" id="first-name" placeholder="Drawer Name">
+						</li>
+						<li>
+						<button id="draweroverlaybutton" type="submit" onclick="drawerOff()">Create</button>
+						</li>
+					</ul>
+				</form>
+			</div>
 		</div>
-	</div>
+	</section>
 	<div id="body">
 		<main role="main">
 			<section role="region">
-			<div class="container">
-				<div class="grid">
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
-					<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+				<div class="container">
+					<div class="grid">
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
+						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+					</div>
 				</div>
-			</div>
 			</section>
 		</main>
 	</div>
