--- a/public/assets.html
+++ b/public/assets.html
@@ -55,12 +55,12 @@
 			<section role="region">
 				<div class="container">
 					<div class="grid">
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+						<div class="cell"><img src="http://image.ibb.co/mrmVQJ/fox.jpg" class="responsive-image" alt="fox" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/iXGTRm/lavendar.jpg" class="responsive-image" alt="lavendar" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/cFzs5J/frog.jpg" alt="frog" class="responsive-image" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/m8PTCy/antelopecanyon.jpg" alt="antelopecanyon" class="responsive-image" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/cyVUKd/orchids.jpg" alt="orchids" class="responsive-image" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/nHCFsy/bwca.jpg" alt="bwca" class="responsive-image" border="0" size="300x250"></div>
 					</div>
 				</div>
 			</section>
@@ -69,12 +69,12 @@
 			<section role="region">
 				<div class="container">
 					<div class="grid">
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image1" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image2" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image3" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image4" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image5" class="responsive-image"></div>
-						<div class="cell"><img src="http://via.placeholder.com/300x250" alt="Image6" class="responsive-image"></div>
+						<div class="cell"><img src="http://image.ibb.co/mrmVQJ/fox.jpg" class="responsive-image" alt="fox" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/iXGTRm/lavendar.jpg" class="responsive-image" alt="lavendar" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/cFzs5J/frog.jpg" alt="frog" class="responsive-image" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/m8PTCy/antelopecanyon.jpg" alt="antelopecanyon" class="responsive-image" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/cyVUKd/orchids.jpg" alt="orchids" class="responsive-image" border="0" size="300x250"></div>
+						<div class="cell"><img src="https://image.ibb.co/nHCFsy/bwca.jpg" alt="bwca" class="responsive-image" border="0" size="300x250"></div>
 					</div>
 				</div>
 			</section> 
