--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -13,10 +13,10 @@
 	</head>
 <body>
 	<div class="topnav" role="navigation" id="responsivetopnav">
-		<a href="#home">Home  <i class="fas fa-home"></i></a>
+		<a href="index.html">Home  <i class="fas fa-home"></i></a>
 		<a href="#account">Account <i class="fas fa-user"></i></a>
 		<div class="dropdown">
-			<a href="#children">Child(ren)  <i class="fas fa-arrow-down"></i></a>
+			<a href="gsearch.html">Child(ren)  <i class="fas fa-arrow-down"></i></a>
 				<div class="dropdown-content">
 					<a href="#">Child 1</a>
 					<a href="#">Child 2</a>
@@ -24,7 +24,7 @@
 				</div>
 		</div>
 		<div class="dropdown">
-			<a href="#drawers">Drawers  <i class="fas fa-arrow-down"></i></a>
+			<a href="assets.html">Drawers  <i class="fas fa-arrow-down"></i></a>
 				<div class="dropdown-content">
 					<a href="#">Drawer 1</a>
 					<a href="#">Drawer 2</a>
