worked on tests

--- a/public/assets.html
+++ b/public/assets.html
@@ -47,11 +47,10 @@
 	</div>
 	<main role="main">
 		<div class="tab">
-				<button class="tablinks" onclick="openChild(event, 'Child1')" id="defaultOpen">Drawer 1</button>
-				<button class="tablinks" onclick="openChild(event, 'Child2')">Drawer 2</button>
-				<button class="tablinks" onclick="openChild(event, 'NewChild')">New Drawer</button>
+				<button class="tablinks" onclick="openDrawer(event, 'Drawer1')" id="defaultOpen">Drawer 1</button>
+				<button class="tablinks" onclick="openDrawer(event, 'Drawer2')">Drawer 2</button>
 		</div>		  
-		<div id="Child1" class="tabcontent">
+		<div id="Drawer1" class="assettabcontent">
 			<section role="region">
 				<div class="container">
 					<div class="grid">
@@ -65,7 +64,7 @@
 				</div>
 			</section>
 		</div>		  
-		<div id="Child2" class="tabcontent">
+		<div id="Drawer2" class="asset-tabcontent">
 			<section role="region">
 				<div class="container">
 					<div class="grid">
