--- a/public/gsearch.html
+++ b/public/gsearch.html
@@ -42,7 +42,7 @@
 	<div id="header">
 		<header role="banner">
 			<h1>JusKidin</h1>
-			<h2>Web Resource Links</h2>
+			<h2 class="web-resource">Web Resource Links</h2>
 		</header>
 	</div>
 	<main role="main">
